test/tests/operators/from/from_list.txt
error: expected `record`
 --> tests/operators/from/from_list.tql:5:6
  |
5 | from [
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
